<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.HomeFragment">

    <TextView
        android:visibility="gone"
        android:id="@+id/txvTextFragmentHome"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


    <RelativeLayout
        android:id="@+id/include"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <include

            android:layout_height="50dp"
            android:layout_width="357dp"
            layout="@layout/search_layout"/>
    </RelativeLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/minMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minPricetextField"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:hint="@string/minPrice"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_centerVertical="true"
            android:text="@string/dash"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/maxPricetextField"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="170dp"
            android:hint="@string/maxPrice"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/priceGoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:text="@string/go"/>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/list"
        tools:ignore="InvalidId"
        />

    <TextView
        android:id="@+id/dataNotFoundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</FrameLayout>