<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/houseCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        app:shapeAppearance="@style/HouseCardShapeAppearance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HouseTitle"
                android:layout_gravity="center_horizontal"
                tools:text="Homes" />

            <ImageView
                android:id="@+id/likeBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ic_heart_button" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceText"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />

                <TextView
                    android:id="@+id/tvDash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/dash"
                    android:textAppearance="@style/HouseSubtitle" />

                <TextView
                    android:id="@+id/tvPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addressText"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/propertyTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/propertyTypeText"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvPropertyType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/catPolicyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catsPolicyText"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvCatPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/dogPolicyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dogsPolicy"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvDogPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes description" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/bathsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bathsText"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />

                <TextView
                    android:id="@+id/tvBathDash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/dash"
                    android:textAppearance="@style/HouseSubtitle" />

                <TextView
                    android:id="@+id/tvBaths2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/BedsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bedsText"
                    android:textAppearance="@style/HouseSubtitle"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBeds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />

                <TextView
                    android:id="@+id/tvBedDash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/dash"
                    android:textAppearance="@style/HouseSubtitle" />

                <TextView
                    android:id="@+id/tvBeds2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textAppearance="@style/HouseSubtitle"
                    tools:text="Homes" />

            </LinearLayout>




        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>